--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,9 @@ classifiers = [
     "Typing :: Typed",
 ]
 
-[project.urls]
-Homepage = ""
-Issues = ""
+#[project.urls]
+#Homepage = ""
+#Issues = ""
 
 [build-system]
 requires = ["setuptools>=61.0"]
