--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pytest --basetmp={envtmpdir}
+    pytest --basetemp="{envtmpdir}"
 
 [testenv:mypy]
 basepython = python3.11
