--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,8 +39,7 @@ jobs:
 
     environment:
       name: pypi
-      # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/p/YOURPROJECT
+      url: https://pypi.org/p/anint/
 
     steps:
       - name: Retrieve release distributions
