--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,21 @@
 [tox]
-envlist = py311, py312, py313, mypy
+envlist = py311, py312, py313, mypy, flake8
 isolated_build = true
 
 [gh-actions]
 python =
-    3.11: py3.11, mypy
+    3.11: py3.11, mypy, flake8
     3.12: py3.12
     3.13: py3.13
+
+[flake8]
+ignore = E501
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
+    -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
 commands =
     pytest --basetemp="{envtmpdir}"
@@ -21,3 +25,9 @@ basepython = python3.11
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands = mypy src
+
+[testenv:flake8]
+basepython = python3.11
+deps =
+    -r{toxinidir}/requirements_dev.txt
+commands = flake8 src
