--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,5 +28,5 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install tox tox-gh-actions
 
-      - name: Text with tox
+      - name: Test with tox
         run: tox
